--- a/app/views/visa_applications/index.html.erb
+++ b/app/views/visa_applications/index.html.erb
@@ -12,11 +12,11 @@
   </tr>
 
 <% @visa_applications.each do |visa_application| %>
-  <tr>
+  <tr data-id="<%= visa_application.id %>">
     <td><%= visa_application.reference_number %></td>
     <td><%= visa_application.date_of_birth %></td>
-    <td><%= visa_application.status %></td>
-    <td><%= link_to 'Update Status', update_status_visa_application_path(visa_application) %></td>
+    <td class='visa_status'><%= visa_application.status %></td>
+    <td><%= link_to 'Update Status', update_status_visa_application_path(visa_application), :class => 'update_visa_status' %></td>
     <td><%= link_to 'Show', visa_application %></td>
     <td><%= link_to 'Edit', edit_visa_application_path(visa_application) %></td>
     <td><%= link_to 'Destroy', visa_application, :confirm => 'Are you sure?', :method => :delete %></td>
