--- a/app/views/visa_applications/index.html.erb
+++ b/app/views/visa_applications/index.html.erb
@@ -1,7 +1,9 @@
-<h1>Listing visa_applications</h1>
+<h1>Listing Visa Applications</h1>
 
-<table>
+<table class="fancy">
+  <thead>
   <tr>
+    <th>Name</th>
     <th>Reference number</th>
     <th>Date of birth</th>
     <th>Status</th>
@@ -10,12 +12,14 @@
     <th></th>
     <th></th>
   </tr>
+  </thead>
 
 <% @visa_applications.each do |visa_application| %>
   <tr data-id="<%= visa_application.id %>">
+    <td><%= visa_application.name %></td>
     <td><%= visa_application.reference_number %></td>
     <td><%= visa_application.date_of_birth %></td>
-    <td class='visa_status'><%= visa_application.status %></td>
+    <td class='visa_status'><%= visa_application.status %>(<%= visa_application.updated_at.to_s%>)</td>
     <td><%= link_to 'Update Status', update_status_visa_application_path(visa_application), :class => 'update_visa_status' %></td>
     <td><%= link_to 'Show', visa_application %></td>
     <td><%= link_to 'Edit', edit_visa_application_path(visa_application) %></td>
