--- a/app/views/visa_applications/index.html.erb
+++ b/app/views/visa_applications/index.html.erb
@@ -20,9 +20,9 @@
     <td><%= visa_application.date_of_birth %></td>
     <td class='visa_status'><%= visa_application.status %>(<%= visa_application.updated_at.strftime("%Y-%m-%d %H:%M:%S")%>)</td>
     <td><%= link_to 'Update Status', update_status_visa_application_path(visa_application), :class => 'update_visa_status' %></td>
-    <td><%= link_to 'Show', visa_application_path(visa_application) %></td>
+    <td><%= link_to 'Show', visa_application %></td>
     <td><%= link_to 'Edit', edit_visa_application_path(visa_application) %></td>
-    <td><%= link_to 'Destroy', visa_application_path(visa_application), :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Destroy', visa_application, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
