--- a/app/views/visa_applications/index.html.erb
+++ b/app/views/visa_applications/index.html.erb
@@ -9,7 +9,7 @@
     <th></th>
     <th></th>
     <th></th>
-    <!-- <th></th> -->
+    <th></th>
   </tr>
   </thead>
 
@@ -22,7 +22,7 @@
     <td><%= link_to 'Update Status', update_status_visa_application_path(visa_application), :class => 'update_visa_status' %></td>
     <td><%= link_to 'Show', visa_application %></td>
     <td><%= link_to 'Edit', edit_visa_application_path(visa_application) %></td>
-    <!-- <td><%= link_to 'Destroy', visa_application, :confirm => 'Are you sure?', :method => :delete %></td> -->
+    <td><%= link_to 'Destroy', visa_application, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
