--- a/app/views/visa_applications/show.html.erb
+++ b/app/views/visa_applications/show.html.erb
@@ -11,6 +11,12 @@
 </p>
 
 <p>
+  <b>Notify:</b>
+  <%= @visa_application.notify_email %>
+</p>
+
+
+<p>
   <b>Type:</b>
   <%= @visa_application.type %><%= flag_img @visa_application.flag %>
 </p>
