--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<div id="login-info">
+<% if current_user %>
+  Signed in as <%= current_user.email %> <%= link_to "Sign out", destroy_user_session_path %>
+<% else %>
+  <%= link_to "Sign in", new_user_session_path %>
+<% end %>
+</div>
 <%= yield %>
 
 </body>
