--- a/app/views/visa_applications/index.html.erb
+++ b/app/views/visa_applications/index.html.erb
@@ -1,5 +1,6 @@
+<%= stylesheet_link_tag 'fancy_table' %>
 <h1>Listing Visa Applications</h1>
-<table class="fancy">
+<table class="fancy" id="applications-list">
   <thead>
   <tr>
     <th>Name</th>
@@ -15,10 +16,10 @@
 
 <% @visa_applications.each do |visa_application| %>
   <tr data-id="<%= visa_application.id %>">
-    <td class='no_wrap'><%= visa_application.name %><%= flag_img(visa_application.flag)%></td>
+    <td class='no_wrap'><%= visa_application.name %>&nbsp;<%= flag_img(visa_application.flag)%></td>
     <!-- ><td><%= visa_application.reference_number %></td> -->
     <td class='no_wrap'><%= visa_application.date_of_birth %></td>
-    <td class='visa_status'><%= visa_application.status %>(<%= visa_application.updated_at.strftime("%Y-%m-%d %H:%M:%S")%>)</td>
+    <td class='visa_status'><span class="status"><%= visa_application.status %></span><span class="notes">Updated at: <%= visa_application.updated_at.strftime("%Y-%m-%d %H:%M:%S")%></span></td>
     <td><%= link_to 'Update Status', update_status_visa_application_path(visa_application), :class => 'update_visa_status' %></td>
     <td><%= link_to 'Show', visa_application %></td>
     <td><%= link_to 'Edit', edit_visa_application_path(visa_application) %></td>
