--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,14 @@
-!!!
-%html
-  %head
-    %title UkVisa
+doctype html
+html
+  head
+    title UkVisa
     = stylesheet_link_tag 'main'
     = javascript_include_tag 'application'
     = csrf_meta_tag
-  %body
+  body
     #login-info
       - if current_user
-        Signed in as #{current_user.email} #{link_to "Sign out", destroy_user_session_path}
+        | Signed in as #{current_user.email} #{link_to "Sign out", destroy_user_session_path}
       - else
         = link_to "Sign in", new_user_session_path
     = yield
