--- a/app/views/visa_applications/_form.html.slim
+++ b/app/views/visa_applications/_form.html.slim
@@ -1,31 +1,31 @@
 = form_for(@visa_application) do |f|
   - if @visa_application.errors.any?
     #error_explanation
-      %h2
+      h2
         = pluralize(@visa_application.errors.count, "error")
-        prohibited this visa_application from being saved:
-      %ul
+        | prohibited this visa_application from being saved:
+      ul
         - @visa_application.errors.full_messages.each do |msg|
-          %li= msg
+          li= msg
   .field
     = f.label :name
-    %br/
+    br/
     = f.text_field :name
   .field
     = f.label :reference_number
-    %br/
+    br/
     = f.text_field :reference_number
   .field
     = f.label :date_of_birth
-    %br/
+    br/
     = f.date_select :date_of_birth,:start_year => 1905
   .field
     = f.label :notify_email
-    %br/
+    br/
     = f.text_field :notify_email
   .field
     = f.label :type
-    %br/
+    br/
     = f.select :type, [UkVisaApplication,DkVisaApplication].map(&:to_s)
   .actions
     = f.submit
