--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,16 @@
 doctype html
 html
   head
-    title UkVisa
-    = stylesheet_link_tag 'main'
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    title Visa Application Tracker
+    = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tag
   body
-    #login-info
-      - if current_user
-        | Signed in as #{current_user.email} #{link_to "Sign out", destroy_user_session_path}
-      - else
-        = link_to "Sign in", new_user_session_path
-    = yield
+    .container
+      #login-info.small
+        - if current_user
+          | Signed in as #{current_user.email} #{link_to "[Sign out]", destroy_user_session_path, method: :delete}
+        - else
+          = link_to "[Sign in]", new_user_session_path
+      = yield
