--- a/app/views/visa_applications/index.html.slim
+++ b/app/views/visa_applications/index.html.slim
@@ -1,11 +1,11 @@
 = stylesheet_link_tag 'fancy_table'
 header
-  h1 Listing Visa Applications
+  h2 Listing Visa Applications
 section
   - if @visa_applications.empty?
     = link_to "Show all applications", url_for(:all => true)
   - else
-    table#applications-list.fancy
+    table#applications-list.table.table-striped.table-hover
       thead
         tr
           th Name
@@ -18,19 +18,20 @@ section
           th
       - @visa_applications.each do |visa_application|
         tr data-id=visa_application.id 
-          td.no_wrap
+          td.lead.text-primary
             = visa_application.name
             | &nbsp;#{flag_img(visa_application.flag)}
           /td.loud= visa_application.reference_number
           /td.no_wrap= visa_application.date_of_birth
           td.visa_status
-            span.status= visa_application.status_text
-            span.notes
+            span.status.lead= visa_application.status_text
+            br/
+            small.notes.text-muted
               | Updated at: #{visa_application.updated_at.strftime("%Y-%m-%d %H:%M:%S")}
-          td= link_to 'Check Status', update_status_visa_application_path(visa_application), :class => 'update_visa_status'
-          td= link_to 'Show', visa_application_path(visa_application)
-          td= link_to 'Edit', edit_visa_application_path(visa_application)
-          td= link_to 'Destroy', visa_application_path(visa_application), data: { confirm: 'Are you sure?' }, :method => :delete
+          td= link_to 'Check Status', update_status_visa_application_path(visa_application), class: 'btn btn-primary update_visa_status'
+          td= link_to 'Show', visa_application, class: 'btn btn-default'
+          td= link_to 'Edit', edit_visa_application_path(visa_application), class: 'btn btn-default'
+          td= link_to 'Destroy', visa_application, data: { confirm: 'Are you sure?' }, :method => :delete, class: 'btn btn-danger'
 nav
   div
-    = link_to 'New Visa application', new_visa_application_path
+    = link_to 'New Visa application', new_visa_application_path, class: 'btn btn-success'
