Switch to static navbar.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tag
   body
-    .navbar.navbar-fixed-top.navbar-default role="navigation"
+    .navbar.navbar-static-top.navbar-default role="navigation"
       .container
         .navbar-header
           .navbar-brand
