Remove STI, extract tracker logic into own class.

--- a/app/views/visa_applications/show.html.slim
+++ b/app/views/visa_applications/show.html.slim
@@ -10,7 +10,7 @@ p
   = @visa_application.notify_email
 p
   b Type:
-  = @visa_application.type
+  = @visa_application.application_type
   = flag_img @visa_application.flag
 p
   b Status:
