--- a/app/views/visa_applications/_form.html.slim
+++ b/app/views/visa_applications/_form.html.slim
@@ -26,6 +26,6 @@
   .field
     = f.label :type
     br/
-    = f.select :type, [UkVisaApplication,DkVisaApplication].map(&:to_s)
+    = f.select :application_type, [VisaApplicationTracker::UkApplication, VisaApplicationTracker::DkApplication].map{|klass| klass.name.split("::").last}
   .actions
     = f.submit
